--- a/index.html
+++ b/index.html
@@ -40,10 +40,16 @@
           </ul>
           <img
             id="moon"
-            src="./img/moon.png"
+            src="./img/noto_crescent-moon.svg"
             class="hidden md:block w-5 cursor-pointer"
             alt=""
           />
+          <!--<img
+            id="sun"
+            src="./img/noto_sun.svg"
+            class="hidden md:block w-5 cursor-pointer"
+            alt=""
+          />-->
           <div id="hamburger" class="space-y-1 md:hidden cursor-pointer z-20">
             <div class="w-6 h-0.5 bg-black"></div>
             <div class="w-6 h-0.5 bg-black"></div>
@@ -165,55 +171,21 @@
           </p>
         </div>
         <!-- bottom -->
-        <div class="p-5 sm:p-0 flex flex-wrap justify-between">
+        <div class="p-5 sm:p-0 flex flex-wrap justify-around">
           <!-- card -->
           <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
+            class="w-full md:w-2/3 lg:w-2/5 lg:h-1/5 hover:shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
           >
-            <img src="./img/item.png" />
+            <img class="rounded-lg" src="./img/LandingPage.png" />
           </div>
           <!-- card -->
           <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
+            class="w-full md:w-2/3 lg:w-2/5 lg:h-1/5 hover:shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
           >
-            <img src="./img/item.png" />
+            <img class="rounded-lg" src="./img/AskSAABI.png" />
           </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="./img/item.png" />
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="./img/item.png" />
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="./img/item.png" />
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="./img/item.png" />
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="./img/item.png" />
-          </div>
-          <!-- card -->
-          <div
-            class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg my-3 md:my-10 m-1 transition-all hover:scale-110"
-          >
-            <img src="./img/item.png" />
-          </div>
+          
+          
         </div>
       </div>
     </div>
@@ -235,7 +207,7 @@
           <input
             class="p-2 w-full md:w-1/2 ring-1 ring-indigo-300 rounded-sm dark:bg-slate-800 dark:ring-0 dark:text-white"
             type="text"
-            placeholder="Name Surname"
+            placeholder="Name"
           />
           <input
             class="p-2 w-full md:w-1/2 ring-1 ring-indigo-300 rounded-sm dark:bg-slate-800 dark:ring-0 dark:text-white"
