--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav class="w-full fixed top-0 bg-white z-10 dark:bg-slate-900">
         <div class="container mx-auto py-5 flex items-center justify-between">
           <div class="flex items-center gap-2">
-            <img class="w-8" src="./img/logo.png" alt="" />
+            <!--<img class="w-8" src="./img/logo.png" alt="" />-->
             <span class="text-2xl font-semibold text-indigo-900 dark:text-white font-body"
               >Saabitra Bera</span
             >
@@ -26,13 +26,13 @@
             class="hidden md:flex space-x-10 text-gray-600 dark:text-gray-100  text-sm uppercase font-body font-semibold"
           >
             <li class="hover:text-gray-500">
-              <a href="#">homepage</a>
+              <a href="#">home</a>
             </li>
             <li class="hover:text-gray-500">
               <a href="#about">about me</a>
             </li>
             <li class="hover:text-gray-500">
-              <a href="#works">works</a>
+              <a href="#works">PROJECTS</a>
             </li>
             <li class="hover:text-gray-500">
               <a href="#contact">contact</a>
@@ -63,20 +63,20 @@
             class="hidden bg-indigo-900 absolute left-0 top-0 w-full p-10 rounded-b-3xl space-y-10 text-white text-center"
           >
             <li>
-              <a id="hLink" href="#">homepage</a>
+              <a id="hLink" href="#">HOME</a>
             </li>
             <li>
-              <a id="hLink" href="#about">about me</a>
+              <a id="hLink" href="#about">ABOUT ME</a>
             </li>
             
             <li>
-              <a id="hLink" href="#works">works</a>
+              <a id="hLink" href="#works">PROJECTS</a>
             </li>
             <li>
-              <a id="hLink" href="#contact">contact</a>
+              <a id="hLink" href="#contact">CONTACT</a>
             </li>
             <li>
-                <a id="hLink" href="">resume</a>
+                <a id="hLink" href="">RESUME</a>
               </li>
           </ul>
         </div>
@@ -139,9 +139,9 @@
         <!-- right -->
         <div class="my-auto flex flex-col gap-3 font-body">
           <h1 class="text-indigo-600 font-semibold">ABOUT ME</h1>
-          <h1 class="text-3xl font-medium dark:text-white">Better Design</h1>
+          <h1 class="text-3xl font-medium dark:text-white">Love for Computers</h1>
           <h1 class="text-3xl font-medium dark:text-white">
-            Better Experience
+            Passion for Designing
           </h1>
           <p class="dark:text-gray-400 text-gray-600 text-lg">
             I work with HTML, CSS, TailwindCSS, Sass, Javascript, React, NextJS, NodeJS, Express, MongoDB, Figma, Illustrator, Photoshop and Adobe XD (..phew!).<br>
@@ -170,7 +170,7 @@
         <!-- top -->
         <div class="flex flex-col gap-3 items-center">
           <h1 class="text-indigo-600 font-bold">PORTFOLIO</h1>
-          <h1 class="text-3xl dark:text-white">Works & Projects</h1>
+          <h1 class="text-3xl dark:text-white">My Projects</h1>
           <p class="w-1/2 text-center dark:text-gray-400 text-gray-600">
             I design and develop various ideas into live and beautiful websites and web apps. Powered by Figma, VS Code and coffee, I turn ideas and innovation
             into a well-designed websites.
@@ -202,10 +202,9 @@
         <!-- top -->
         <div class="flex flex-col gap-3 items-center">
           <h1 class="text-indigo-600 font-bold">CONTACT</h1>
-          <h1 class="text-3xl dark:text-white">Have a Question?</h1>
+          <h1 class="text-3xl dark:text-white">Get in touch with me here</h1>
           <p class="w-1/2 text-center text-gray-400">
-            Do you have an idea? Let's discuss it and see what we can do
-            together.
+            You can contact with me by sending me a mail by writing down your name, email address and your message in the given boxes.
           </p>
         </div>
         <!-- bottom -->
